# linalg

./: CMakeLists.txt  linalg.cpp  test.cpp
.cache/clangd/index/: linalg.hpp.AC0766C47A0CBF9A.idx  test.cpp.7670CD957E83B786.idx
include/: linalg.hpp
